--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,17 +1,16 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/zenika
-    username: root
-    password: root
-    driver-classname: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
     properties:
       hibernate:
+        show_sql: true
         format_sql: true
-    database: mysql
-    database-platform: org.hibernate.dialect.MySQLDialect
 
